added copyright details to footer

--- a/index.html
+++ b/index.html
@@ -311,6 +311,11 @@
                 
                 
             </div>
+            <div class="text-center mt-3">
+                <p>&copy;<span id="copyright"></span> Techie-Anmol. All rights reserved.</p>
+                <p>Designed and developed by Anmol Sharma</p>
+                <p><a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a></p>
+            </div>
         </div>
     </footer>
 
