--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Portfolio Anmol Sharma</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="images/TechieAnmolLogo.png" />
     <!-- linking css file -->
     <link rel="stylesheet" href="style.css">
     <!-- bootstrap CDN -->
@@ -19,6 +20,7 @@
     <nav class="navbar navbar-expand-lg fixed-top navbar-dark navbarScroll">
         <div class="container">
             <a class="navbar-brand" href="#">
+                <img src="images/TechieAnmolLogo.png" alt="logo" width="30" height="30" class="d-inline-block align-text-top">
                 Techie-Anmol
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
